# simple-resolv

./: configure.ac
src/: Makefile.am  resolv.c
